@@ -1,5 +1,9 @@
 2001-04-18  Michael Meeks  <michael@ximian.com>
 
+	* tests/Makefile.am: upd.
+
+2001-04-18  Michael Meeks  <michael@ximian.com>
+
 	* bonobo.h: add.
 
 	* libbonoboui.h: add
